# ppsh

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  API_semantics.md  CMakeLists.txt  Containerfile  README.md  build.sh  clean.sh
.github/workflows/: workflow.yml
PPshell/: CMakeLists.txt  builtins.cpp  builtins.hpp  command.c  command.cpp  command.h  command.hpp  commands.hpp  error_handling.h  exceptions.cpp  exceptions.hpp  file_descriptor.c  file_descriptor.cpp  file_descriptor.h  file_descriptor.hpp  internal_cd.c  internal_commands.c  internal_commands.h  internal_exit.c  lexer.c  main.c  main.cpp  main.h  main.lex  main.y  parser.c  parser.h  pipeline.c  pipeline.cpp  pipeline.h  pipeline.hpp  pipelines.c  pipelines.h  pipes.c  pipes.cpp  pipes.h  pipes.hpp  process.cpp  process.hpp  program_options.hpp  (+17 more)
PPshell/builtins/: cd.cpp  exit.cpp
PPshell/commands/: command.cpp  file.cpp  help.cpp  interactive.cpp
images/: deploy.Containerfile  runtime.Containerfile  runtime.Containerfile.dockerignore  test.Containerfile
ppsh/: CMakeLists.txt  builtins.cpp  builtins.hpp  command.cpp  command.hpp  commands.hpp  exceptions.cpp  exceptions.hpp  file_descriptor.cpp  file_descriptor.hpp  main.cpp  pipeline.cpp  pipeline.hpp  pipes.cpp  pipes.hpp  process.cpp  process.hpp  program_options.hpp  redirection.cpp  redirection.hpp  redirections.cpp  redirections.hpp
ppsh/builtins/: cd.cpp  exit.cpp
ppsh/commands/: command.cpp  file.cpp  help.cpp  interactive.cpp
tests/: requirements.txt  test_exit.py
tests/tests/: test_cd.py  test_exit.py  test_pipe.py  test_redirection.py  utils.py
